force-app/main/default/objects/Evidence_Control_Mapping__mdt/Evidence_Control_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Evidence Control Mapping</label>
    <pluralLabel>Evidence Control Mappings</pluralLabel>
</CustomObject>