force-app/main/default/objects/Evidence_Control_Mapping__mdt/fields/Control_Key__c.field-meta.xml
<CustomField>
    <fullName>Control_Key__c</fullName>
    <label>Control Key</label>
    <type>Text</type>
    <length>80</length>
</CustomField>