force-app/main/default/objects/Evidence_Control_Mapping__mdt/fields/Control_Label__c.field-meta.xml
<CustomField>
    <fullName>Control_Label__c</fullName>
    <label>Control Label</label>
    <type>Text</type>
    <length>255</length>
</CustomField>