force-app/main/default/objects/Evidence_Control_Mapping__mdt/fields/Control_Reference__c.field-meta.xml
<CustomField>
    <fullName>Control_Reference__c</fullName>
    <label>Control Reference</label>
    <type>Text</type>
    <length>120</length>
</CustomField>