force-app/main/default/objects/Evidence_Control_Mapping__mdt/fields/Evidence_Query_JSON__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Query_JSON__c</fullName>
    <label>Evidence Query JSON</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>