force-app/main/default/objects/Evidence_Control_Mapping__mdt/fields/Framework__c.field-meta.xml
<CustomField>
    <fullName>Framework__c</fullName>
    <label>Framework</label>
    <type>Text</type>
    <length>120</length>
</CustomField>