force-app/main/default/objects/Evidence_Control_Mapping__mdt/fields/Satisfied_By__c.field-meta.xml
<CustomField>
    <fullName>Satisfied_By__c</fullName>
    <label>Satisfied By</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>